--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
@@ -1,25 +1,47 @@
-﻿@using KursovaRabota.ViewModels
-@model List<DisplayUserViewModel>
+﻿@using KursovaRabota.ViewModels.UserVMs;
+
+@model DisplayAllUsersViewModel
 
 <h2>Нерегистрирани потребители</h2>
 
-@foreach (var user in Model)
-{
-    <div class="card" style="width: 18rem; margin-bottom: 20px;">
-        <div class="card-body">
-            <h5 class="card-title">@($"{user.FirstName} {user.LastName}")</h5>
-            <p class="card-text">
-                Потребителско име: @user.UserName <br />Електронна поща: @user.Email Телефон: <br />@user.PhoneNumber
-            </p>
-            @if (!string.IsNullOrEmpty(user.DesiredRole))
-            {
-                <p class="card-text">Желана роля: @user.DesiredRole</p>
-            }
-            <form method="get">
-                <button asp-action="ApproveUser" asp-controller="User" type="submit" class="btn btn-primary" asp-route-id="@user.Id">Одобри</button>
-            </form>
-        </div>
-    </div>
-}
+<form id="filterForm">
+    <label for="subjectName">Филтрирай по име на предмет:</label>
+    <select id="subjectName" name="subjectName">
+        <option value="">Избери предмет</option>
+        @foreach (var subject in Model.Subjects)
+        {
+            <option value="@subject.SubjectName">@subject.SubjectName</option>
+        }
 
+    </select>
+</form>
+@if (Model.Users != null)
+{
+    @foreach (var user in Model.Users)
+    {
+        if (user.TeacherSubjects.Contains(Model.SelectedSubject) || string.IsNullOrEmpty(Model.SelectedSubject.SubjectName))
+        {
+            <div class="card" style="width: 18rem; margin-bottom: 20px;">
+                <div class="card-body">
+                    <h5 class="card-title">@user.FirstName @user.LastName</h5>
+                    <p class="card-text">
+                        Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
+                    </p>
+                    @if (!string.IsNullOrEmpty(user.DesiredRole))
+                    {
+                        <p class="card-text">Желана роля: @user.DesiredRole</p>
+                    }
+                    <form method="get">
+                        <button asp-action="ApproveUser" asp-controller="User" type="submit" class="btn btn-primary" asp-route-id="@user.Id">Одобри</button>
+                    </form>
+                </div>
+            </div>
+            // Break the loop to avoid duplicating user cards
+            break;
+        }
+    }
+}
+else
+{
+    <p>Няма потребтели</p>
 }
