first user fulter done

--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
@@ -5,44 +5,46 @@
 <h2>Потребители</h2>
 
 <form id="filterForm" method="get" asp-action="GetAll" asp-controller="User">
-    <label asp-for="SelectedSubject.SubjectName">Филтрирай по име на предмет:</label>
-    <select id="subjectName" name="SelectedSubject.SubjectId">
-        <option value="">Избери предмет</option>
-        @foreach (var subject in Model.Subjects)
-        {
-            <option value="@subject">@subject.SubjectName</option>
-        }
-    </select>
+    <div class="form-group">
+        <label for="Subject">Предмет:</label>
+        <select id="subjectDropdown" asp-for="SelectedSubject.Id" asp-items="@(new SelectList(Model.Subjects, "Id", "SubjectName"))" class="form-control">
+            <option value="">Избери предмет</option>
+        </select>
+        <span asp-validation-for="SelectedSubject.Id" class="text-danger"></span>
+    </div>
 </form>
 @if (Model.Users != null)
 {
     @foreach (var user in Model.Users)
     {
-        if (user.TeacherSubjects.Count != 0 || Model.SelectedSubject!=null)
+        if (Model.SelectedSubject!=null)
         {
-            if (user.TeacherSubjects.Contains(Model.SelectedSubject) && string.IsNullOrEmpty(Model.SelectedSubject.SubjectName))
+            foreach (var item in user.TeacherSubjects)
             {
-                <div class="card" style="width: 18rem; margin-bottom: 20px;">
-                    <div class="card-body">
-                        <h5 class="card-title">@user.FirstName @user.LastName</h5>
-                        <p class="card-text">
-                            Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
-                        </p>
-                        @if (!string.IsNullOrEmpty(user.DesiredRole))
-                        {
-                            <p class="card-text">Желана роля: @user.DesiredRole</p>
-                        }
-                        <form method="get">
-                            <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
-                        </form>
-                        <form method="get">
-                            <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
-                        </form>
+                if (item.Id == Model.SelectedSubject.Id)
+                {
+                    <div class="card" style="width: 18rem; margin-bottom: 20px;">
+                        <div class="card-body">
+                            <h5 class="card-title">@user.FirstName @user.LastName</h5>
+                            <p class="card-text">
+                                Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
+                            </p>
+                            @if (!string.IsNullOrEmpty(user.DesiredRole))
+                            {
+                                <p class="card-text">Желана роля: @user.DesiredRole</p>
+                            }
+                            <form method="get">
+                                <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
+                            </form>
+                            <form method="get">
+                                <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
+                            </form>
+                        </div>
                     </div>
-                </div>
-                
+                }
             }
         }
+            
         else
         {
             <div class="card" style="width: 18rem; margin-bottom: 20px;">
@@ -70,7 +72,7 @@
 }else {<p>Няма потребтели</p>}
 
 <script>
-    document.getElementById('subjectName').addEventListener('change', function() {
+    document.getElementById('subjectDropdown').addEventListener('change', function () {
         document.getElementById('filterForm').submit();
     });
 </script>
