--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
@@ -13,63 +13,35 @@
         <span asp-validation-for="SelectedSubject.Id" class="text-danger"></span>
     </div>
 </form>
+
 @if (Model.Users != null)
 {
     @foreach (var user in Model.Users)
     {
-        if (Model.SelectedSubject!=null)
-        {
-            foreach (var item in user.TeacherSubjects)
-            {
-                if (item.Id == Model.SelectedSubject.Id)
+        <div class="card" style="width: 18rem; margin-bottom: 20px;">
+            <div class="card-body">
+                <h5 class="card-title">@user.FirstName @user.LastName</h5>
+                <p class="card-text">
+                    Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
+                </p>
+                @if (!string.IsNullOrEmpty(user.DesiredRole))
                 {
-                    <div class="card" style="width: 18rem; margin-bottom: 20px;">
-                        <div class="card-body">
-                            <h5 class="card-title">@user.FirstName @user.LastName</h5>
-                            <p class="card-text">
-                                Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
-                            </p>
-                            @if (!string.IsNullOrEmpty(user.DesiredRole))
-                            {
-                                <p class="card-text">Желана роля: @user.DesiredRole</p>
-                            }
-                            <form method="get">
-                                <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
-                            </form>
-                            <form method="get">
-                                <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
-                            </form>
-                        </div>
-                    </div>
+                    <p class="card-text">Желана роля: @user.DesiredRole</p>
                 }
-            }
-        }
-            
-        else
-        {
-            <div class="card" style="width: 18rem; margin-bottom: 20px;">
-                <div class="card-body">
-                    <h5 class="card-title">@user.FirstName @user.LastName</h5>
-                    <p class="card-text">
-                        Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
-                    </p>
-                    @if (!string.IsNullOrEmpty(user.DesiredRole))
-                    {
-                        <p class="card-text">Желана роля: @user.DesiredRole</p>
-                    }
-                    <form method="get">
-                        <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
-                    </form>
-                    <form method="get">
-                        <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
-                    </form>
-                </div>
+                <form method="get">
+                    <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
+                </form>
+                <form method="get">
+                    <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
+                </form>
             </div>
-        
-        }
-
+        </div>
     }
-}else {<p>Няма потребтели</p>}
+}
+else
+{
+    <p>Няма потребтели</p>
+}
 
 <script>
     document.getElementById('subjectDropdown').addEventListener('change', function () {
