--- a/src/KursovaRabota/KursovaRabota/Views/Competition/GetAll.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Competition/GetAll.cshtml
@@ -11,8 +11,73 @@
     <a asp-controller="Competition" asp-action="Add" class="btn btn-success">Добави Състезание</a>
 </div>
 
+<div>
+    <form style="display:flex; flex-direction:row" method="get" asp-action="GetAll" asp-controller="Competition">
+        <div style="display:flex" class="form-group">
+            <label asp-for="@Model.PlaceOfConduct">Място на провеждане:</label>
+            <input asp-for="@Model.PlaceOfConduct" class="form-control">
+            <span asp-validation-for="@Model.PlaceOfConduct" class="text-danger"></span>
+        </div>
+
+        <div style="display:flex" class="form-group">
+            <label asp-for="DateOfConduct">Дата на провеждане:</label>
+            <input asp-for="DateOfConduct" class="form-control" type="date"/>
+            <span asp-validation-for="DateOfConduct" class="text-danger"></span>
+        </div>
+
+        <div style="display:flex" class="form-group">
+            <label for="Subject">Предмет:</label>
+            <select id="subjectDropdown" asp-for="Subject.Id" asp-items="@(new SelectList(Model.Subjects, "Id", "SubjectName"))" class="form-control">
+                <option value="">Избери предмет</option>
+            </select>
+        </div>
+
+        <div style="display:flex" class="form-group">
+            <label for="Subject">Сортиране по дата:</label>
+            <select id="subjectDropdown" asp-for="SortByDate" class="form-control">
+                <option value=true>Сортиране в низходящ ред</option>
+                <option value=true>Сортиране във възходящ ред</option>
+            </select>
+            <span asp-validation-for="SortByDate" class="text-danger"></span>
+        </div>
+        <button style="display:flex" class="btn btn-primary" type="submit">Филтрирай</button>
+    </form>
+
+</div>
+
 @if (Model.Competitions.Any())
 {
+    <hr>
+    <form asp-action="GetAll" asp-controller="Competition" method="get" id="paginationForm">
+        <input type="hidden" name="pageNumber" id="pageNumberInput" value="@(Model.CurrentPage)" />
+        <label for="PageSize">Брой елементи на страница:</label>
+        <select asp-for="@Model.PageSize" id="paginationDropdown" name="pageSize" class="form-control" onchange="pageSize(this.value)">
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
+        </select>
+        <div class="d-flex gap-2 justify-content-center">
+            <div class="pagination d-flex gap-2">
+                <div class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")" id="paginationPrevious" style="@(Model.CurrentPage == 1 ? "display:none;" : "")">
+                    <a class="page-link border-0" href="javascript:void(0);" onclick="changePage(@(Model.CurrentPage - 1))">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" /></svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="pagination d-flex gap-2" id="paginationList">
+                <!-- Pagination numbers will be generated dynamically here -->
+            </div>
+
+            <div class="pagination d-flex gap-2">
+                <div class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")" style="@(Model.CurrentPage == Model.TotalPages ? "display:none;" : "")">
+                    <a class="page-link border-0" href="javascript:void(0);" onclick="changePage(@(Model.CurrentPage + 1))">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" /></svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </form>
 
     <table class="table">
         <thead>
@@ -25,10 +90,13 @@
                 <th>Брой Записани Участници</th>
                 <th>Максимален Брой Участници</th>
                 <th>Крайна Дата за Регистрация</th>
+                <th>Дата на Провеждане</th>
                 <th>Действия</th>
             </tr>
         </thead>
         <tbody id="competitionTable">
+
+
             @foreach (var competition in Model.Competitions)
             {
                 <tr>
@@ -40,6 +108,7 @@
                     <td>@competition.CurrentParticipants</td>
                     <td>@competition.MaxParticipants</td>
                     <td>@competition.RegistrationDeadline.ToString("yyyy-MM-dd")</td>
+                    <td>@competition.DateOfConduct.ToString("yyyy-MM-dd")</td>
                     <td>
                         @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
                         {
@@ -54,10 +123,10 @@
                         }
                         @if (User.IsInRole("Admin"))
                         {
-                            <form asp-controller="Competition" asp-action="Delete" method="post">
-                                <input type="hidden" name="id" value="@competition.Id" />
-                                <button type="submit" class="btn btn-danger">Деактивиране</button>
-                            </form>
+
+
+                            <button onclick="confirmDelete('@competition.Id')"  class="btn btn-danger">Деактивиране</button>
+                      
                         }
                         @if (User.IsInRole("Student"))
                         {
@@ -73,32 +142,7 @@
             }
         </tbody>
     </table>
-    <form asp-action="GetAll" asp-controller="Competition" method="get" id="paginationForm">
 
-            <input type="hidden" name="pageNumber" id="pageNumberInput" value="@(Model.CurrentPage)" />
-            <input type="hidden" name="pageSize" value="@(Model.PageSize)" />
-            <div class="d-flex gap-2 justify-content-center">
-                <div class="pagination d-flex gap-2">
-                    <div class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")" id="paginationPrevious" style="@(Model.CurrentPage == 1 ? "display:none;" : "")">
-                        <a class="page-link border-0" href="javascript:void(0);" onclick="changePage(@(Model.CurrentPage - 1))">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" /></svg>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="pagination d-flex gap-2" id="paginationList">
-                    <!-- Pagination numbers will be generated dynamically here -->
-                </div>
-
-                <div class="pagination d-flex gap-2">
-                    <div class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")" style="@(Model.CurrentPage == Model.TotalPages ? "display:none;" : "")">
-                        <a class="page-link border-0" href="javascript:void(0);" onclick="changePage(@(Model.CurrentPage + 1))">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" /></svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </form>
 }
 else
 {
@@ -107,6 +151,12 @@ else
 
 @section scripts
     {
+    <script>
+        document.getElementById('paginationDropdown').addEventListener('change', function () {
+            document.getElementById('paginationForm').submit();
+        });
+    </script>
+
     <script>
         function changePage(pageNumber) {
             document.getElementById("pageNumberInput").value = pageNumber;
@@ -145,12 +195,15 @@ else
                 paginationList.appendChild(listItem);
             }
         }
+    </script>
 
-        // Call the function initially only if currentPage and totalPages are defined
-        if (@(ViewBag.CurrentPage) && @(ViewBag.TotalPages)) {
-            generatePaginationNumbers(@(ViewBag.CurrentPage), @(ViewBag.TotalPages));
-        } else {
-            console.error("ViewBag.CurrentPage or ViewBag.TotalPages is null or undefined.");
+    <script>
+        function confirmDelete(id) {
+            var result = confirm("Сигурни ли сте, че искате да деактивирате състезанието?");
+
+            if (result) {
+                window.location.href = '/Competition/Deactivate?id=' + id ;
+            }
         }
     </script>
 }
