--- a/src/KursovaRabota/KursovaRabota/Views/CompetitionType/Add.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/CompetitionType/Add.cshtml
@@ -18,7 +18,17 @@
         @for (int i = 1; i <= Model.AllTypes.Count; i++)
         {
             <label>@i: @Model.AllTypes[i - 1].Type</label>
-            <a class="btn btn-danger" asp-action="Delete" asp-controller="CompetitionType" asp-route-id="@Model.AllTypes[i-1].Id">Delete</a>
+            <a class="btn btn-primary" asp-action="Update" asp-controller="CompetitionType" asp-route-id="@Model.AllTypes[i-1].Id">Промени</a>
+            <button onclick="confirmDelete('@Model.AllTypes[i-1].Id')" class="btn btn-danger">Изтриване</button>
         }
     }
 </div>
+<script>
+    function confirmDelete(id) {
+        var result = confirm("Сигурни ли сте, че искате да изтриете типа състезание?");
+
+        if (result) {
+            window.location.href = '/CompetitionType/Delete?id=' + id;
+        }
+    }
+</script>
