--- a/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
@@ -8,7 +8,7 @@
         <span asp-validation-for="SubjectName" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Add Subject</button>
+    <button type="submit" class="btn btn-primary">Добави предмет</button>
 
 
 </form>
@@ -18,7 +18,17 @@
         @for (int i = 1; i <= Model.Subjects.Count; i++)
         {
             <label>@i: @Model.Subjects[i-1].SubjectName</label>
-            <a class="btn btn-danger" asp-action="Delete" asp-controller="Subject" asp-route-id="@Model.Subjects[i-1].Id">Delete</a>
+            <a class="btn btn-primary" asp-action="Update" asp-controller="Subject" asp-route-id="@Model.Subjects[i-1].Id">Промени</a>
+            <button onclick="confirmDelete('@Model.Subjects[i-1].Id')" class="btn btn-danger">Изтриване</button>
         }
     }
 </div>
+<script>
+    function confirmDelete(id) {
+        var result = confirm("Сигурни ли сте, че искате да изтриете предмета?");
+
+        if (result) {
+            window.location.href = '/Subject/Delete?id=' + id;
+        }
+    }
+</script>
