some small stuff fixed and added documentation

--- a/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
@@ -89,8 +89,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer style="max-height: 100px; display: flex;" class="border-top footer text-muted">
+        <div class="container" >
             &copy; 2024 - KursovaRabota - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
