--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
@@ -33,6 +33,16 @@
             </select>
             <span asp-validation-for="SortByName" class="text-danger"></span>
         </div>
+
+        <div class="form-group">
+            <label for="desiredRole">Роля:</label>
+            <select asp-for="@Model.DesiredRole" class="form-control" id="desiredRole" required>
+                <option value="Teacher">Учител</option>
+                <option value="Student">Ученик</option>
+            </select>
+            <span asp-validation-for="@Model.DesiredRole" class="text-danger"></span>
+        </div>
+
         <button style="display:flex" class="btn btn-primary" type="submit">Филтрирай</button>
     </form>
 
